// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get layout 1`] = `
Array [
  <div
    className="
          absolute top-[75px] bottom-0 right-0 left-0
          bg-white
          flex flex-1
          transition-transform
          transition-duration-200
          transition-ease-in
          z-[11]
          -translate-y-full
        "
  />,
  <div
    className="flex flex-col h-[70vh] overflow-hidden"
  >
    <div
      className="flex items-center justify-between ml-10 mt-3"
    />
    <div
      className="flex flex-wrap flex-row align-start justify-center mt-5 overflow-y-auto"
    />
  </div>,
  <div
    className="h-full flex flex-row"
  >
    <div
      className="flex w-full flex-col"
    />
    <div
      className="flex h-full flex-col flex-1 min-w-[500px] max-w-[calc(100vw-20rem)]"
    >
      <div />
    </div>
  </div>,
]
`;

exports[`should render 404 1`] = `
Array [
  <div
    className="
          absolute top-[75px] bottom-0 right-0 left-0
          bg-white
          flex flex-1
          transition-transform
          transition-duration-200
          transition-ease-in
          z-[11]
          -translate-y-full
        "
  />,
  <div
    className="flex flex-col h-[70vh] overflow-hidden"
  >
    <div
      className="flex items-center justify-between ml-10 mt-3"
    />
    <div
      className="flex flex-wrap flex-row align-start justify-center mt-5 overflow-y-auto"
    />
  </div>,
  <div
    className="h-full flex flex-row"
  >
    <div
      className="flex w-full flex-col"
    />
    <div
      className="flex h-full flex-col flex-1 min-w-[500px] max-w-[calc(100vw-20rem)]"
    >
      Foo
    </div>
  </div>,
]
`;

exports[`should render empty 1`] = `
Array [
  <div
    className="
          absolute top-[75px] bottom-0 right-0 left-0
          bg-white
          flex flex-1
          transition-transform
          transition-duration-200
          transition-ease-in
          z-[11]
          -translate-y-full
        "
  />,
  <div
    className="flex flex-col h-[70vh] overflow-hidden"
  >
    <div
      className="flex items-center justify-between ml-10 mt-3"
    />
    <div
      className="flex flex-wrap flex-row align-start justify-center mt-5 overflow-y-auto"
    />
  </div>,
  <div
    className="h-full flex flex-row"
  >
    <div
      className="flex w-full flex-col"
    />
    <div
      className="flex h-full flex-col flex-1 min-w-[500px] max-w-[calc(100vw-20rem)]"
    >
      Foo
    </div>
  </div>,
]
`;

exports[`should render fetching 1`] = `
Array [
  <div
    className="
          absolute top-[75px] bottom-0 right-0 left-0
          bg-white
          flex flex-1
          transition-transform
          transition-duration-200
          transition-ease-in
          z-[11]
          -translate-y-full
        "
  />,
  <div
    className="flex flex-col h-[70vh] overflow-hidden"
  >
    <div
      className="flex items-center justify-between ml-10 mt-3"
    />
    <div
      className="flex flex-wrap flex-row align-start justify-center mt-5 overflow-y-auto"
    />
  </div>,
  <div
    className="h-full flex flex-row"
  >
    <div
      className="flex w-full flex-col"
    />
    <div
      className="flex h-full flex-col flex-1 min-w-[500px] max-w-[calc(100vw-20rem)]"
    >
      Foo
    </div>
  </div>,
]
`;
